# trident-dbg

./: .gitignore  CMakeLists.txt  README.md
examples/: dummy  dummy.cpp
include/: breakpoint.hpp  debugger.hpp
src/: breakpoint.cpp  debugger.cpp  main.cpp
